
Version 0.3
-----------
API Changes
- Config::setDb() is now Config::setDatabase()
- Config::init() is now Config::create()